Fix #3456 : Full exploration title on mobile visible as info icon (#3476)
* Full exploration title on mobile visible as info icon

* Full exploration title on mobile visible as info icon fixes

* Full exploration title on mobile visible as info icon fixes

* Prefixes css in footer

* Mobile info icon Minor css prefix fix

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -2922,6 +2922,7 @@ md-card.preview-conversation-skin-supplemental-card {
 
 .oppia-modal-information-card .modal-dialog {
   margin: 100px auto;
+  max-width: 98vw;
   width: 400px;
 }
 
